UPDATE FRAGMENT ADDITEMSHOP DONE UNTIL TOMBOL CHECKOUT DONE, FIX RIPPLE BUTTON

--- a/app/src/main/res/drawable/rounded_corner_button.xml
+++ b/app/src/main/res/drawable/rounded_corner_button.xml
@@ -1,7 +1,14 @@
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
-    <stroke android:width="1dp"
-        android:color="@color/black"
-        />
-    <corners android:radius="3dp"/>
-</shape>
+<?xml version="1.0" encoding="utf-8"?>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/tab_active">
+
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/white" />
+            <stroke android:width="1dp"
+                android:color="@color/black"/>
+            <corners android:radius="3dp" />
+        </shape>
+    </item>
+
+</ripple>
+
