--- a/app/src/main/res/layout/fragment_add_item_shop.xml
+++ b/app/src/main/res/layout/fragment_add_item_shop.xml
@@ -134,8 +134,10 @@
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card_emptyList"
-                android:layout_width="368dp"
+                android:layout_width="match_parent"
                 android:layout_height="128dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"
                 app:cardBackgroundColor="@color/backround_latar"
                 app:cardElevation="3dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -219,14 +221,163 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_titleDiscount" />
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layout_edPercentage"
+            style="@style/EditText.fillItem"
+            android:layout_width="66dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="10dp"
+            app:hintEnabled="false"
+            app:layout_constraintStart_toEndOf="@+id/btn_check"
+            app:layout_constraintTop_toBottomOf="@id/tv_titleDiscount">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/ed_percentage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:hint="@string/isi_diskon"
+                android:inputType="number"
+                android:paddingTop="0dp"
+                android:paddingBottom="0dp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/dm_sans_bold"
+            android:includeFontPadding="false"
+            android:text="@string/percentage"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@+id/layout_edPercentage"
+            app:layout_constraintTop_toBottomOf="@id/tv_titleDiscount" />
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/divider_discount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            app:dividerColor="@color/black"
+            app:dividerInsetEnd="16dp"
+            app:dividerInsetStart="16dp"
+            app:dividerThickness="1dp"
+            app:layout_constraintTop_toBottomOf="@id/layout_edPercentage" />
+
+        <!--BAGIAN AKHIR DARI BAGIAN SET DISCIUNT FOR ALL ITEM-->
+
+        <TextView
+            android:id="@+id/tv_totaldiscount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/dm_sans_bold"
+            android:includeFontPadding="false"
+            android:text="@string/note_tvTotalSaving"
+            android:textColor="@color/hijau_gelap"
+            android:textSize="17sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider_discount" />
+
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/dm_sans"
+            android:text="@string/hint_date"
+            android:textSize="17sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_totaldiscount" />
+
+        <TextView
+            android:id="@+id/tv_amountTotalSaving"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/source_serif_4_bold"
+            android:text="@string/amount_budget"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_date" />
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/divider_totalSaving"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            app:dividerColor="@color/black"
+            app:dividerInsetEnd="16dp"
+            app:dividerInsetStart="16dp"
+            app:dividerThickness="1dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_amountTotalSaving" />
+
+        <!--BAGIAN AKHIR DARI TOTAL SAVING-->
+
+        <TextView
+            android:id="@+id/tv_totalShopping"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/dm_sans_bold"
+            android:text="@string/tv_totalShopping"
+            android:textColor="@color/hijau_gelap"
+            android:textSize="17sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider_totalSaving" />
+
+        <TextView
+            android:id="@+id/tv_amountTotalShopping"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/source_serif_4_bold"
+            android:text="@string/amount_budget"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider_totalSaving" />
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/divider_totalShopping"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            app:dividerColor="@color/black"
+            app:dividerInsetEnd="16dp"
+            app:dividerInsetStart="16dp"
+            app:dividerThickness="2dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_amountTotalShopping" />
+
+        <!--BAGIAN AKHIR DARI TOTAL SHOPPING-->
+
+        <Button
+            android:id="@+id/btn_checkout"
+            style="@style/ButtonApp.versi2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/button_bg_checkout"
+            android:text="@string/btn_checkout"
+            app:layout_constraintTop_toBottomOf="@id/divider_totalShopping" />
 
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1000dp"
+            android:layout_height="100dp"
             android:background="@color/backround_latar"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_check" />
+            app:layout_constraintTop_toBottomOf="@id/btn_checkout" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
