--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,6 +31,14 @@
         <item name="fontFamily">@font/source_serif_4_bold</item>
     </style>
 
+    <style name="ButtonApp.versi2" parent="@style/Widget.Material3.Button">
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/button_item</item>
+        <item name="rippleColor">@color/tab_inactive</item>
+        <item name="android:textSize">17sp</item>
+        <item name="fontFamily">@font/source_serif_4_bold</item>
+    </style>
+
     <style name="EditText.Open" parent="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">
         <item name="boxCornerRadiusBottomStart">20dp</item>
         <item name="cursorColor">@color/black</item>
@@ -52,6 +60,17 @@
         <item name="boxStrokeWidth">0dp</item>
         <item name="boxStrokeWidthFocused">0dp</item>
         <item name="boxStrokeColor">@android:color/transparent</item>
+    </style>
+
+    <style name="EditText.fillItem" parent="@style/Widget.Material3.TextInputLayout.OutlinedBox">
+        <item name="boxCornerRadiusBottomStart">5dp</item>
+        <item name="boxCornerRadiusBottomEnd">5dp</item>
+        <item name="boxCornerRadiusTopEnd">5dp</item>
+        <item name="boxCornerRadiusTopStart">5dp</item>
+        <item name="boxStrokeColor">@color/stroke_hijau_gelap</item>
+        <item name="boxStrokeWidth">1dp</item>
+        <item name="cursorColor">@color/black</item>
+        <item name="boxBackgroundColor">@color/white</item>
     </style>
 
 </resources>
