UPDATE CLEAN CODE PARCELABLE ONLY IDSHOPPING KE FRAGMENT ADDITEMSHOP (SUCCESS)

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -40,8 +40,8 @@
         android:label="fragment_add_item_shop"
         tools:layout="@layout/fragment_add_item_shop" >
         <argument
-            android:name="dataShopping"
-            app:argType="com.example.savingbyshopping.data.response.ShoppingList" />
+            android:name="IdShopping"
+            app:argType="long" />
     </fragment>
 
 </navigation>
