--- a/app/src/main/res/layout/fragment_dialog_add_item_shop.xml
+++ b/app/src/main/res/layout/fragment_dialog_add_item_shop.xml
@@ -4,28 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context=".ui.addItemShop.DialogAddItemShopFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_test"
-            android:layout_width="match_parent"
+        <ImageButton
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:contentDescription="@string/cancel_dialog"
+            android:scaleType="centerInside"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="18dp"
+            android:background="@drawable/ripple_cancel_icon"
+            android:src="@drawable/cancel_icon"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <View
-            android:id="@+id/view_test"
-            android:layout_width="match_parent"
-            android:layout_height="1000dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_test" />
+
+      <TextView
+             android:id="@+id/tv_test"
+             app:layout_constraintTop_toBottomOf="@id/view_test"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:text="@string/app_name"
+             android:layout_marginTop="1000dp"
+             android:textAlignment="center"
+             android:textSize="20sp"
+             app:layout_constraintStart_toStartOf="parent" />
+
+         <View
+             android:id="@+id/view_test"
+             android:layout_width="match_parent"
+             android:layout_height="1000dp"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintTop_toBottomOf="@id/btn_cancel" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
