--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -90,4 +90,8 @@
         <item name="android:backgroundDimAmount">0.5</item>
     </style>
 
+    <style name="RadioButton.App" parent="Widget.Material3.CompoundButton.RadioButton">
+        <item name="buttonTint">@color/rb_button_tint</item>
+    </style>
+
 </resources>
